--- a/todo
+++ b/todo
@@ -1,7 +1,15 @@
-Create Window
-Render two cubes
+Create Window:
+Render two cubes:
     - connect shaders
         - light source  
         - container
 Implement a Camera:
     - move(rotational, translational)
+    - better camera control, i want the object pointed to by the camera to be visible when i start up
+        (are we even pointing at what i think we are pointing at?)
+    - 
+Implement Ground:
+    - draw the "ground" centered at the world 
+
+Draw axis of the coordinate systems:
+    - world space
